--- a/Laboratory.xcodeproj/xcshareddata/xcschemes/Laboratory.xcscheme
+++ b/Laboratory.xcodeproj/xcshareddata/xcschemes/Laboratory.xcscheme
@@ -48,6 +48,11 @@
                BlueprintName = "LaboratoryUnitTests"
                ReferencedContainer = "container:Laboratory.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "FirestoreSvcTest">
+               </Test>
+            </SkippedTests>
          </TestableReference>
          <TestableReference
             skipped = "NO">
