--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Bundle Install
+      run: bundle install
+    - name: Dependencies
+      run: bundle exec pod install
     - name: Build
       run: swift build -v
     - name: Run tests
