--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,11 +12,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
     - name: Bundle Install
       run: bundle install
     - name: Dependencies
       run: bundle exec pod install
+    - name: Set XCode Version
+      run: sudo xcode-select -s /Applications/Xcode_11.app
     - name: List Simulators
       run: xcrun instruments -s
     - name: Build
