--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: Run
 
 on:
   push:
@@ -13,13 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+    - name: Set XCode Version
+      run: sudo xcode-select -s /Applications/Xcode_11.app
     - name: Bundle Install
       run: bundle install
     - name: Dependencies
       run: bundle exec pod install
-    - name: Set XCode Version
-      run: sudo xcode-select -s /Applications/Xcode_11.app
-    - name: List Simulators
-      run: xcrun instruments -s
     - name: Build
-      run: xcodebuild -workspace "Laboratory.xcworkspace" -scheme "Laboratory" -destination "platform=iOS Simulator,name=iPhone 8,OS=latest"
+      run: xcodebuild -workspace "Laboratory.xcworkspace" -scheme "Laboratory"
